--- a/FDS_Lab_Assignment.ipynb
+++ b/FDS_Lab_Assignment.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Importing Libraries"
+    "### Importing Libraries\n",
+    " - Pandas for reading data file\n",
+    " - Numpy for performing statistical calculations \n",
+    " - Matplotlib and seaborn for visualization \n",
+    " - Scipy.stats for Skewness and Kurtosis"
    ]
   },
   {
@@ -13,12 +17,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
+    "import pandas as pd \n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sb\n",
     "from scipy.stats import skew\n",
     "from scipy.stats import kurtosis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- To see all the columns which are present in the dataset"
    ]
   },
   {
@@ -34,7 +45,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Reading dataset"
+    "### Reading dataset\n",
+    "- df is dataframe .\n",
+    "- pd.read_excel reads the excel file.\n",
+    "- head Function prints the first five rows of the dataset."
    ]
   },
   {
