--- a/FDS_Lab_Assignment.ipynb
+++ b/FDS_Lab_Assignment.ipynb
@@ -52,6 +52,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Description of data\n",
+    "- Data belongs to student category which contains **fname** , **age** and **gender** column.\n",
+    "- **Fname** contins the name of students, **age** column contains the age of the students and **grade** column contains the marks obtained. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
